Fix rightPane visibility for low-resolution viewports

--- a/app/css/featurePopup.css
+++ b/app/css/featurePopup.css
@@ -33,11 +33,17 @@
 /*			Left pane			*/
 /********************************/
 
+#overlappedObjects
+{
+	text-align: center;
+}
+
 #leftDiv
 {
 	display: inline-block;
 	margin-right: 20px;
 	vertical-align: top;
+	width: 135px;
 }
 
 #featureListDiv
@@ -77,7 +83,7 @@
 	border-bottom: 10px solid gray;
 	margin-bottom: 10px;
 	margin-top: 10px;
-	margin-left: 69px;
+	margin-left: 55px;
 }
 
 .scroll-arrow-down {
@@ -88,7 +94,7 @@
 	border-top: 10px solid orange;
 	margin-bottom: 10px;
 	margin-top: 10px;
-	margin-left: 69px;
+	margin-left: 55px;
 	
 }
 
@@ -131,6 +137,7 @@
 	outline: none;
 	display: inline-block;
 	padding-right: 10px;
+	width: 100%;
 }
 
 .propertiesTable {
